creation pdf for reservation info

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,8 +9,8 @@
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <link href="assets/custom-calendar/datepicker.min.css" rel="stylesheet" />
   <script src="assets/custom-calendar/datepicker-full.min.js"></script>
-
   <script src="assets/custom-calendar/locales/el.js"></script>
+  <script src="assets/qrcode/qrious.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
